--- a/src/app/cadastro/cadastro.html
+++ b/src/app/cadastro/cadastro.html
@@ -1,3 +1,61 @@
-<div>
-    
+<div fxLayout="row" fxLayoutAlign="center">
+    <div fxLayout="column" fxFlex="900px">
+        <form class="mt-60" #clientesFrm="ngForm" (ngSubmit)="salvar()">
+            <mat-card>
+                <mat-card-header>
+                    <mat-card-title>
+                        Dados Pessoais
+                    </mat-card-title>
+                </mat-card-header>
+                    <mat-card-content class="mt-20">
+                        <div fxLayout="row" fxLayoutAlign="start" fxLayoutGap="30px">
+                            <div fxLayout="column" fxFlex="800px" >
+                                <mat-form-field class="full-width">
+                                    <mat-label>Nome: *</mat-label>
+                                    <input type="text" [(ngModel)]="cliente.nome" name="nome" matInput placeholder="Ex: José da Silva">
+                                </mat-form-field>
+                            </div>
+                        </div>
+                        <div fxLayout="row" fxLayoutAlign="start" fxLayoutGap="30px">
+                            <div fxLayout="column" fxFlex="800px" >
+                                <mat-form-field class="full-width">
+                                    <mat-label>Email: *</mat-label>
+                                    <input type="text" [(ngModel)]="cliente.email" name="email" matInput placeholder="Digite seu email">
+                                </mat-form-field> 
+                            </div>
+                        </div>
+                        <div fxLayout="row" fxLayoutAlign="start" fxLayoutGap="30px">
+                            <div fxLayout="column" fxFlex="400px">
+                                <mat-form-field class="full-width">
+                                    <mat-label>CPF: *</mat-label>
+                                    <input type="text" [(ngModel)]="cliente.cpf" name="cpf" matInput placeholder="Ex: 123.456.789-12">
+                                </mat-form-field> 
+                            </div>
+                        </div>
+                        <div fxLayout="row" fxLayoutAlign="start" fxLayoutGap="30px">
+                            <div fxLayout="column" fxFlex="400px">
+                                <mat-form-field class="full-width">
+                                    <mat-label>Data Nascimento: *</mat-label>
+                                    <input type="date" [(ngModel)]="cliente.dataNascimento" name="dataNascimento" matInput placeholder="Digite sua data de nascimento">
+                                </mat-form-field> 
+                            </div>
+                        </div>
+                    </mat-card-content>
+                    <mat-card-actions>       
+                        <button mat-flat-button color="primary" class='ml-5' type="submit">
+                            <mat-icon fontIcon="save"></mat-icon>
+                            Salvar
+                        </button>
+                         <button mat-flat-button color="primary" class='ml-5'>
+                            <mat-icon fontIcon="refresh"></mat-icon>
+                            Atualizar
+                        </button>
+                        <button mat-flat-button color="accent" class='ml-5'>
+                            <mat-icon fontIcon="backspace"></mat-icon>
+                            Limpar
+                        </button>               
+                    </mat-card-actions>
+            </mat-card>
+        </form>
+    </div>
 </div>
