--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,3 +36,24 @@ body {
   height: 100%;
 }
 /* You can add global styles to this file, and also import other style files */
+
+.mt-20{
+  margin-top: 20px;
+}
+
+.mt-60{
+  margin-top: 60px
+}
+
+.mt-40 {
+  margin-top: 40px;
+}
+
+.full-width {
+  width: 100%;
+}
+
+.ml-5 {
+  margin-left: 5px;
+}
+
