--- a/src/app/consulta/consulta.html
+++ b/src/app/consulta/consulta.html
@@ -1,1 +1,69 @@
-<p>consulta works!</p>
+<div fxLayout="row" fxLayoutAlign="center">
+    <div fxLayout="column" fxFlex="1000px">
+        <form class="mt-60" #buscaForm="ngForm" (ngSubmit)="pesquisar()">
+            <mat-card>
+                <mat-card-header>
+                    <mat-card-title>Consulta</mat-card-title>
+                </mat-card-header>
+                <mat-card-content class="mt-20">
+                    <div fxLayout="row"> 
+                        <div fxLayout="column" fxFlex="950px">
+                            <mat-form-field class="full-width">
+                                <mat-label>Nome:</mat-label>
+                                <input name="nomeBusca" [(ngModel)]="nomeBusca" matInput placeholder="ex:José">
+                            </mat-form-field>
+                        </div>
+                    </div>
+                </mat-card-content>
+                <mat-card-actions>       
+                        <button mat-flat-button color="primary" class='ml-5' type="submit">
+                            <mat-icon fontIcon="search"></mat-icon>
+                            Consultar
+                        </button>   
+                </mat-card-actions>
+            </mat-card>
+        </form>
+    </div>
+
+</div>
+
+<div fxLayout="row" fxLayoutAlign="center" class="mt-60">
+    <div fxLayout="column" fxFlex="1000px">
+         <mat-card>
+                <mat-card-header>
+                    <mat-card-title>Resultado</mat-card-title>
+                </mat-card-header>
+                <mat-card-content>
+                    <table mat-table [dataSource]="listaClientes">
+                        <ng-container  matColumnDef="id">
+                            <th mat-header-cell *matHeaderCellDef>id</th>
+                            <td mat-cell *matCellDef="let cliente">{{ cliente.id }}</td>
+                        </ng-container >
+
+                        <ng-container  matColumnDef="nome">
+                            <th mat-header-cell *matHeaderCellDef>Nome</th>
+                            <td mat-cell *matCellDef="let cliente">{{ cliente.nome }}</td>
+                        </ng-container >
+
+                        <ng-container  matColumnDef="cpf">
+                            <th mat-header-cell *matHeaderCellDef>CPF</th>
+                            <td mat-cell *matCellDef="let cliente">{{ cliente.cpf }}</td>
+                        </ng-container >
+
+                        <ng-container  matColumnDef="dataNascimento">
+                            <th mat-header-cell *matHeaderCellDef>Data Nascimento</th>
+                            <td mat-cell *matCellDef="let cliente">{{ cliente.dataNascimento }}</td>
+                        </ng-container >
+
+                        <ng-container  matColumnDef="email">
+                            <th mat-header-cell *matHeaderCellDef>email</th>
+                            <td mat-cell *matCellDef="let cliente">{{ cliente.email }}</td>
+                        </ng-container >
+
+                        <tr mat-header-row *matHeaderRowDef="colunaTable"></tr>
+                        <tr mat-row *matRowDef="let row; columns: colunaTable"></tr>
+                    </table>
+                </mat-card-content>
+         </mat-card>
+    </div>
+</div>
