--- a/src/app/cadastro/cadastro.html
+++ b/src/app/cadastro/cadastro.html
@@ -41,15 +41,18 @@
                             </div>
                         </div>
                     </mat-card-content>
-                    <mat-card-actions>       
-                        <button mat-flat-button color="primary" class='ml-5' type="submit">
-                            <mat-icon fontIcon="save"></mat-icon>
-                            Salvar
-                        </button>
-                         <button mat-flat-button color="primary" class='ml-5'>
-                            <mat-icon fontIcon="refresh"></mat-icon>
-                            Atualizar
-                        </button>
+                    <mat-card-actions>
+                        @if(!atualizando){       
+                            <button mat-flat-button color="primary" class='ml-5' type="submit">
+                                <mat-icon fontIcon="save"></mat-icon>
+                                Salvar
+                            </button>
+                        } @else {
+                            <button mat-flat-button color="primary" class='ml-5' type="submit">
+                                <mat-icon fontIcon="refresh"></mat-icon>
+                                Atualizar
+                            </button>
+                        }
                         <button mat-flat-button color="accent" class='ml-5'>
                             <mat-icon fontIcon="backspace"></mat-icon>
                             Limpar
