--- a/src/app/consulta/consulta.html
+++ b/src/app/consulta/consulta.html
@@ -60,6 +60,16 @@
                             <td mat-cell *matCellDef="let cliente">{{ cliente.email }}</td>
                         </ng-container >
 
+                         <ng-container  matColumnDef="acoes">
+                            <th mat-header-cell *matHeaderCellDef></th>
+                            <td mat-cell *matCellDef="let cliente">
+                                <button type="button" mat-button (click)="preparaEditar(cliente.id)">
+                                    <mat-icon fontIcon="edit"></mat-icon>
+                                    Editar
+                                </button>
+                            </td>
+                        </ng-container >
+
                         <tr mat-header-row *matHeaderRowDef="colunaTable"></tr>
                         <tr mat-row *matRowDef="let row; columns: colunaTable"></tr>
                     </table>
