--- a/src/app/consulta/consulta.html
+++ b/src/app/consulta/consulta.html
@@ -60,13 +60,25 @@
                             <td mat-cell *matCellDef="let cliente">{{ cliente.email }}</td>
                         </ng-container >
 
-                         <ng-container  matColumnDef="acoes">
+                        <ng-container  matColumnDef="acoes">
                             <th mat-header-cell *matHeaderCellDef></th>
                             <td mat-cell *matCellDef="let cliente">
                                 <button type="button" mat-button (click)="preparaEditar(cliente.id)">
                                     <mat-icon fontIcon="edit"></mat-icon>
                                     Editar
                                 </button>
+
+                                @if(!cliente.deletando){
+                                    <button type="button" mat-button (click)="prepararDeletar(cliente)">
+                                        <mat-icon fontIcon="delete"></mat-icon>
+                                        Deletar
+                                    </button>
+                                } @else {
+                                    <button type="button" mat-button (click)="deletar(cliente)">
+                                        <mat-icon fontIcon="question_mark"></mat-icon>
+                                        Confirmar
+                                    </button>
+                                }
                             </td>
                         </ng-container >
 
