--- a/src/app/cadastro/cadastro.html
+++ b/src/app/cadastro/cadastro.html
@@ -28,7 +28,7 @@
                             <div fxLayout="column" fxFlex="400px">
                                 <mat-form-field class="full-width">
                                     <mat-label>CPF: *</mat-label>
-                                    <input type="text" [(ngModel)]="cliente.cpf" name="cpf" matInput placeholder="Ex: 123.456.789-12">
+                                    <input type="text" [(ngModel)]="cliente.cpf" name="cpf" mask="000.000.000-00" matInput placeholder="Ex: 123.456.789-12">
                                 </mat-form-field> 
                             </div>
                         </div>
@@ -40,6 +40,20 @@
                                 </mat-form-field> 
                             </div>
                         </div>
+
+                        <div fxLayout="row" fxLayoutAlign="start" fxLayoutGap="30px">
+                            <div fxLayout="column" fxFlex="400px">
+                                <mat-form-field class="full-width">
+                                    <mat-label>UF: *</mat-label>
+                                    <mat-select>
+                                        @for (uf of estados; track uf) {
+                                            <mat-option [value]="uf.sigla"> {{ uf.sigla }} </mat-option>
+                                        }
+                                    </mat-select>
+                                </mat-form-field> 
+                            </div>
+                        </div>
+                        
                     </mat-card-content>
                     <mat-card-actions>
                         @if(!atualizando){       
